2008-06-24  Satoshi Nakagawa <psychs@limechat.net>

	Added /timer command.
	e.g. /timer 5 join #limechat

2008-06-04  Satoshi Nakagawa <psychs@limechat.net>

	Added "first" attribute for span.sender to show nicknames in the first line only.

2008-06-03  Satoshi Nakagawa <psychs@limechat.net>

	Changed to ignore CTCP replies with empty commands.

==== LimeChat 0.18 ====

2008-05-21  HIROSE Masaaki <hirose31@gmail.com>

	Added nick attribute to the console log.

2008-05-06  Satoshi Nakagawa <artension@gmail.com>

	Supported non-BMP characters for exact word matching.

2008-05-06  Satoshi Nakagawa <artension@gmail.com>

	Cmd+E should use NSFindPboard.

2008-05-06  Satoshi Nakagawa <artension@gmail.com>

	Assigned Cmd+E to copy the selection.

2008-05-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to not use channels for nick completion.

2008-04-26  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, parameters for Time.at should be Fixnum.

2008-04-25  Satoshi Nakagawa <artension@gmail.com>

	Fixed a crash, dropped symlinks on the member list should be ignored for DCC send.

2008-04-17  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, marked scrollers were visible on the top-left corner of log views when initialized.

2008-04-17  Satoshi Nakagawa <artension@gmail.com>

	Changed the format of text messages for Growl notifications to "<nick> msg".

2008-04-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the scrollers of log views won't be rendered correctly when initialized with not enough frame.

2008-04-16  Satoshi Nakagawa <artension@gmail.com>

	Improved the last fix.

2008-04-16  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, "MODE +a user" should be considered as setting an user mask.

2008-04-15  Satoshi Nakagawa <artension@gmail.com>

	Added Kick, Ban and Kick & Ban in the context menu on the member list.

==== LimeChat 0.17.2 ====

2008-04-15  Satoshi Nakagawa <artension@gmail.com>
